fixed nav bar spacing issues

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     border:1px solid red;
 }
 
+body{
+    background-color:#fff;
+}
+
 .container{
     display:flex;
     flex-flow:column nowrap;
@@ -18,17 +22,21 @@
     display:flex;
     list-style-type: none;
     padding:0;
+    width:100%;
+    justify-content: space-evenly;
 }
 
 .nav-left-group{
     display:flex;
     margin-left:1.5%;
+    min-width:10%;
 }
 
 .nav-right-group{
     display:flex;
     align-items: center;
     margin-right:1.5%;
+    min-width:20%;
 }
 
 /* END NAV STYLING */
@@ -62,14 +70,16 @@
     list-style-type: none;
     padding:0;
     display:flex;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .footer-group-left{
     margin-left:1.5%;
+    min-width:25%;
 }
 .footer-group-right{
     margin-right:1.5%;
+    min-width:25%;
 }
 
 
